--- a/.github/workflows/vale_tests.yml
+++ b/.github/workflows/vale_tests.yml
@@ -26,7 +26,7 @@ jobs:
         # Optional
         config: https://raw.githubusercontent.com/uyuni-project/uyuni-docs/vale-style-checks-prototype/.vale.ini
 
-        files: '["modules/administration", "modules/client-configuration", "modules/installation", "modules/large-deployments", "modules/quickstart-public-cloud", "modules/quickstart-sap", "modules/reference", "modules/retail", "modules/salt", "modules/upgrade"]'
+        files: '["modules/administration", "modules/client-configuration", "modules/common-workflows", "modules/installation-and-upgrade", "modules/quickstart", "modules/reference", "modules/retail", "modules/specialized-guides"]'
 
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
