--- a/parameters.yml
+++ b/parameters.yml
@@ -34,7 +34,7 @@ products:
       - attribute: start_page
         value: suse-manager::index.adoc
       - attribute: url
-        value: https://documentation.suse.com/suma/4.3/
+        value: /
     ui:
       bundle:    
         # Modify the default ui depending on your publishing endpoint
