--- a/.github/workflows/feature_tests_uyuni.yml
+++ b/.github/workflows/feature_tests_uyuni.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v1
       
     - name: '[TOOLCHAIN] Set up Ruby 2.7'
-      uses: actions/setup-ruby@v1
+    - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7.x
+        ruby-version: '2.7'
 
     - name: '[TOOLCHAIN] Set up NodeJS'
       uses: actions/setup-node@v1
