--- a/.github/workflows/vale_tests.yml
+++ b/.github/workflows/vale_tests.yml
@@ -9,7 +9,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: '[TOOLCHAIN] Set up Ruby 2.7'
-    - uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: '2.7'
 
