--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Set Swap Space
+      uses: pierotofy/set-swap-space@master
+      with:
+        swap-size-gb: 10
+          
     - name: '[CHECKOUT] Master'
       uses: actions/checkout@v1
 
