--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -7,17 +7,13 @@ on:
 
 env:
   LANG: "en_US.UTF-8"
+  NODE_OPTIONS: '--max_old_space_size=4096'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-    - name: Set Swap Space
-      uses: pierotofy/set-swap-space@master
-      with:
-        swap-size-gb: 10
-          
+    steps:  
     - name: '[CHECKOUT] Master'
       uses: actions/checkout@v1
 
