--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -41,7 +41,7 @@ jobs:
         sudo apt-get install -y graphicsmagick
         sudo apt-get install -y libgraphicsmagick1-dev
         gem install prawn-gmagick -v 0.0.9
-        gem install rouge
+        gem install rouge -v 3.30.0
         gem install pygments.rb
         gem install coderay
         asciidoctor --version
