--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -64,8 +64,7 @@ jobs:
     - name: '[BUILD] UYUNI Docs with Lunr/Antora Custom Docker Image'
       run: |
         make configure-uyuni
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
+        export NODE_OPTIONS: "--max_old_space_size=4096"
         docker run -u $UID --privileged -e DOCSEARCH_ENABLED=true -e DOCSEARCH_ENGINE=lunr -v $GITHUB_WORKSPACE:/antora/ --rm -t lunr/antora:custom site.yml --generator antora-site-generator-lunr
         #cd build/
         ls -a
