Corrected architecture for Ubuntu clients.

--- a/parameters.yml
+++ b/parameters.yml
@@ -250,6 +250,8 @@ asciidoc:
     # Architectures
   - attribute: aarch64
     value: aarch64
+  - attribute: amd64
+    value: amd64
   - attribute: arm64
     value: ARM64
   - attribute: ipf
