--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 12
+      env:
+        NODE_OPTIONS: "--max_old_space_size=4096"
 
     - name: '[TOOLCHAIN] po4a'
       run: |
