--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -14,15 +14,15 @@ jobs:
 
     steps:
     - name: '[CHECKOUT] Master'
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: '[TOOLCHAIN] Set up Ruby 3.0'
-    - uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.0'
 
     - name: '[TOOLCHAIN] Set up NodeJS'
-    - uses: actions/setup-node@v1
+      uses: actions/setup-node@v1
       with:
         node-version: '10.x'
     #- run: npm install
