--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -3,7 +3,7 @@ name: build_test_deploy_uyuni
 on:
   push:
     branches:
-      - master
+      - actions-updates-jcayouette
 
 env:
   LANG: "en_US.UTF-8"
