--- a/.github/workflows/translation_tests_en_US.yml
+++ b/.github/workflows/translation_tests_en_US.yml
@@ -12,20 +12,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
+    steps:  
     - name: '[CHECKOUT] Master'
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
 
-    - name: '[TOOLCHAIN] Set up Ruby 2.7'
+    - name: '[TOOLCHAIN] Set up Ruby 3.0'
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.7'
+        ruby-version: '3.0'
 
     - name: '[TOOLCHAIN] Set up NodeJS'
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '10.x'
-    #- run: npm install
+        node-version: 16
     
     - name: '[TOOLCHAIN] po4a'
       run: |
