--- a/.github/workflows/vale_tests.yml
+++ b/.github/workflows/vale_tests.yml
@@ -6,18 +6,18 @@ jobs:
 
     steps:
     - name: '[CHECKOUT] Checkout branch that triggered this workflow'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: '[TOOLCHAIN] Set up Ruby 2.7'
+    - name: '[TOOLCHAIN] Set up Ruby 3.0'
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.7'
+        ruby-version: '3.0'
 
     - name: 'Install Asciidoctor'
       run: gem install asciidoctor
 
     - name: Vale
-      uses: errata-ai/vale-action@v1.4.3
+      uses: errata-ai/vale-action@reviewdog
       with:
         # Optional
         styles: |
