--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -3,7 +3,7 @@ name: build_test_deploy_uyuni
 on:
   push:
     branches:
-      - manager-4.2
+      - manager-4.2-MU-4.2.11
 
 env:
   LANG: "zh_CN.UTF-8"
