--- a/parameters.yml
+++ b/parameters.yml
@@ -2,7 +2,7 @@ products:
   suma:
     antora:
       name: "suse-manager"
-      title: "SUSE Manager Documentation"
+      title: "SUSE Manager 4.3 Documentation"
     asciidoc:
       - attribute: productname
         value: "SUSE Manager"
@@ -30,11 +30,13 @@ products:
       - name: "specialized-guides"
     site:
       - attribute: title
-        value: "SUSE Manager Documentation"
+        value: "SUSE Manager 4.3 Documentation"
       - attribute: start_page
         value: suse-manager::index.adoc
+      # Use / as the url value for webui docs (This enables local search)
+      # Use https://documentation.suse.com/suma/4.3/ this enables canonical urls for SEO USE '/' for the webui!
       - attribute: url
-        value: /
+        value: https://documentation.suse.com/suma/4.3/
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
