--- a/parameters.yml
+++ b/parameters.yml
@@ -61,11 +61,11 @@ products:
       - attribute: productname
         value: "Uyuni"
       - attribute: productnumber
-        value: "2022.11"
+        value: "2023.02"
       - attribute: docversion
-        value: "2022.11"
+        value: "2023.02"
       - attribute: minorversion
-        value: "2022.11"
+        value: "2023.02"
       - attribute: suma-content
         value: false
       - attribute: uyuni-content
@@ -87,7 +87,7 @@ products:
       - attribute: start_page
         value: "uyuni::index.adoc"
       - attribute: url
-        value: /
+        value: https://www.uyuni-project.org/uyuni-docs/
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
