--- a/parameters.yml
+++ b/parameters.yml
@@ -201,6 +201,8 @@ asciidoc:
     value: "SUSE Manager Proxy"
   - attribute: sles
     value: "SUSE Linux Enterprise Server"
+  - attribute: sled
+    value: "SUSE Linux Enterprise Desktop"
   - attribute: sle
     value: "SUSE Linux Enterprise"
   - attribute: sll
